Fix 'border' serialization with both common and uncommon values https://bugs.webkit.org/show_bug.cgi?id=189597

Patch by Oriol Brufau <obrufau@igalia.com> on 2018-09-20
Reviewed by Simon Fraser.

Source/WebCore:

Remove CommonValueMode enum and make borderPropertyValue always return null
when there are uncommon values (the previous ReturnNullOnUncommonValues mode).

Test: fast/css/getPropertyValue-border.html
Test: fast/dom/css-shorthand-common-value.html

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const):
(WebCore::StyleProperties::borderPropertyValue const):
(WebCore::StyleProperties::asText const):
* css/StyleProperties.h:

LayoutTests:

Fix existing tests to check that 'border' serializes to empty string if there
are uncommon values.

* fast/css/getPropertyValue-border-expected.txt:
* fast/css/getPropertyValue-border.html:
* fast/dom/css-shorthand-common-value-expected.txt:
* fast/dom/css-shorthand-common-value.html:

Canonical link: https://commits.webkit.org/204750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236278 268f45cc-cd09-0410-ab3c-d52691b4dbfc